objects/LH__LH_Export_Lookups__c.object
<CustomObject>
    <fields>
        <fullName>LH__LookupData__c</fullName>
        <label>LookupData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LH__LookupKey__c</fullName>
        <label>LookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__Type__c</fullName>
        <description>Type is either a lookup ustom setting or a related LH object</description>
        <label>Type</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lookup Export</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>LH_Export_Lookups ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>